8316547: Use JUnit.dir jtreg property with jpackage JUnit tests
Reviewed-by: almatvee