@@ -33,12 +33,6 @@ import static org.junit.Assert.assertThat;
 import org.junit.Test;
 
 
-/*
- * @test
- * @modules jdk.jpackage
- * @compile --patch-module jdk.jpackage=${test.src} --add-reads jdk.jpackage=ALL-UNNAMED --add-exports jdk.jpackage/jdk.jpackage.internal=ALL-UNNAMED ToolValidatorTest.java
- * @run junit/othervm --patch-module jdk.jpackage=${test.classes} --add-reads jdk.jpackage=ALL-UNNAMED --add-exports jdk.jpackage/jdk.jpackage.internal=ALL-UNNAMED jdk.jpackage.internal.ToolValidatorTest
- */
 public class ToolValidatorTest {
 
     @Test
